--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@capacitor/core": "2.4.7",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
+    "@types/video.js": "^7.3.15",
+    "amazon-ivs-player": "^1.2.0",
+    "babel-eslint": "^10.1.0",
     "core-js": "^3.6.5",
+    "video.js": "^7.6.6",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@capacitor/cli": "2.4.7",
     "@types/jest": "^24.0.19",
+    "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -35,6 +40,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-vuetify": "~2.4.0",
     "vue-jest": "^5.0.0-0"
   },
   "description": "An Ionic project"
