--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,16 @@ Thumbs.db
 UserInterfaceState.xcuserstate
 $RECYCLE.BIN/
 
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 *.log
 log.txt
 npm-debug.log*
 
+# Editor directories and files
 /.idea
 /.ionic
 /.sass-cache
